force-app/main/default/objects/Order/fields/Loyalty_Profile__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Profile__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Related loyalty profile.</description>
    <label>Loyalty Profile</label>
    <referenceTo>Loyalty_Profile__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>