force-app/main/default/objects/Order/fields/Points_Accrued__c.field-meta.xml
<CustomField>
    <fullName>Points_Accrued__c</fullName>
    <description>Points accrued on order.</description>
    <formula>ROUND( TotalAmount * VALUE($Label.Points_Accrual_Factor), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Points Accrued</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>