force-app/main/default/objects/Order/fields/Points_Redeemed__c.field-meta.xml
<CustomField>
    <fullName>Points_Redeemed__c</fullName>
    <description>Stores the points redeemed while checkout.</description>
    <label>Points Redeemed</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>